# pipeline-grpo

./: .gitignore  README.md  accelerate-config.yaml  config.yaml  dvc.yaml  main.py  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
nbs/: explore.ipynb  grpo-trl.ipynb  grpo-unsloth.ipynb  train_unsloth.py
nbs/wandb/: latest-run
nbs/wandb/run-20250225_131552-4gmfe6ug/: run-4gmfe6ug.wandb
nbs/wandb/run-20250225_131552-4gmfe6ug/files/: requirements.txt  wandb-metadata.json
nbs/wandb/run-20250225_131552-4gmfe6ug/files/code/nbs/: grpo-trl.ipynb
nbs/wandb/run-20250225_141519-n0xr76i9/: run-n0xr76i9.wandb
nbs/wandb/run-20250225_141519-n0xr76i9/files/: requirements.txt  wandb-metadata.json
nbs/wandb/run-20250225_141519-n0xr76i9/files/code/nbs/: grpo-trl.ipynb
nbs/wandb/run-20250225_141739-i5xzzfow/: run-i5xzzfow.wandb
nbs/wandb/run-20250225_141739-i5xzzfow/files/: wandb-metadata.json
nbs/wandb/run-20250225_141739-i5xzzfow/files/code/nbs/: grpo-trl.ipynb
nbs/wandb/run-20250225_142117-lwkmmj47/: run-lwkmmj47.wandb
nbs/wandb/run-20250225_142117-lwkmmj47/files/: wandb-metadata.json
nbs/wandb/run-20250225_142117-lwkmmj47/files/code/nbs/: grpo-trl.ipynb
