[project]
name = "grpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.3.2",
    "dvc>=3.59.0",
    "dvc-s3>=3.2.0",
    "flash-attn>=2.7.4.post1",
    "peft>=0.14.0",
    "python-dotenv>=1.0.1",
    "trl>=0.15.1",
    "typer>=0.15.1",
    "unsloth>=2025.2.15",
    "vllm>=0.7.3",
    "wandb>=0.19.7",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.9.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 

[tool.uv]
no-build-isolation-package = ["flash-attn"]
